# SolarPro

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/sample/: README.md  plant_config.json  weather_power.csv
docs/: architecture.md  methodology.md
notebooks/: 01_calibration_and_loss_analysis.ipynb
scripts/: generate_sample_data.py
src/solarpro/: __init__.py  __main__.py  config.py  exports.py  losses.py  metrics.py  pipeline.py  preprocessing.py  recommendations.py  weather.py
src/solarpro/degradation/: __init__.py  arrhenius.py  hallberg_peck.py  hsu_soiling.py  tdr.py
src/solarpro/prediction/: __init__.py  calibration.py  cell_temperature.py  pvusa.py
tests/: test_solarpro.py
web/: index.html  pyscript.toml
