[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarpro"
version = "0.1.0"
description = "AI-powered decision support platform for photovoltaic production prediction, performance-loss diagnosis, and maintenance recommendations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Gaïa Mezaïb" }]
keywords = [
    "photovoltaic",
    "solar-energy",
    "pvusa",
    "degradation-modeling",
    "energy-prediction",
    "ollama",
    "decision-support",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
notebooks = ["matplotlib>=3.7", "jupyter>=1.0"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
solarpro = "solarpro.pipeline:main"

[project.urls]
Homepage = "https://github.com/gaiaflaviamezaib/SolarPro"
Demo = "https://lozanobosch.k3pler.org/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
